Update index.html footer

--- a/index.html
+++ b/index.html
@@ -225,53 +225,72 @@
 
 
 
+<!-- FOOTER -->
+<footer class="bg-dark text-light pt-4 pb-3">
+  <div class="container">
+    <div class="row g-4 text-center">
+
+      <!-- Contact -->
+      <div class="col-md-4">
+        <h5 class="fw-bold">Contact Us</h5>
+        <p class="mb-1">Email: sonjoym@phy.iitkgp.ac.in</p>
+        <p class="mb-2">Phone: 83808</p>
+
+        <div class="d-flex justify-content-center align-items-center gap-3 mt-2">
+          <span class="fw-bold small">Follow us</span>
+
+          <a href="https://www.linkedin.com/company/amqi-lab/" 
+             target="_blank" rel="noopener" 
+             class="social-icon" title="LinkedIn">
+            <i class="bi bi-linkedin"></i>
+          </a>
+
+          <!-- <a href="mailto:sonjoym@phy.iitkgp.ac.in" 
+             class="social-icon" title="Email">
+            <i class="bi bi-envelope-fill"></i>
+          </a> -->
+
+          <!-- <a href="https://www.youtube.com/@amqilab" 
+            target="_blank" rel="noopener"
+            class="social-icon" title="YouTube Channel">
+            <i class="bi bi-youtube"></i>
+          </a> -->
 
 
-
-  <footer class="bg-dark text-light pt-2 mt-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="text-center">
-
-            <h5>Contact Us</h5>
-            <p>Email: sonjoym@phy.iitkgp.ac.in <br>
-              Phone: 83808</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="text-center">
-
-            <div class="copyright">
-              <strong><span>Atoms, Molecules & Quantum Information Group</span></strong>
-            </div>
-            <div class="credits">
-              Designed by <a> <strong>Subrata and Soumya</strong></a><br>
-              <!-- <link href="assets/img/mypic.png" rel="apple-touch-icon"> -->
-              <!-- <img src="assets/img/mypic.png" class="img-rounded" style="width: 70px;"> -->
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="text-center">
-            <h5>Address</h5>
-            <p>Atomic and Molecular Physics Lab<br>
-              C-136,
-              Department of Physics<br>
-              IIT Kharagpur</p>
-          </div>
-        </div>
-
-        <!-- <div class="col-md-4">
-          <h5>Map</h5>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230.6814503274609!2d87.31093432894353!3d22.319500197661732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1d4404c5c2d88d%3A0x200987d62ee24538!2sDepartment%20Of%20Physics!5e0!3m2!1sen!2sin!4v1678198616089!5m2!1sen!2sin" width="150" height="150" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </div>
-      <hr> -->
+
+      <!-- Branding -->
+      <div class="col-md-4">
+        <h6 class="fw-bold mb-1">Atomic, Molecular & Quantum Information Group</h6>
+        <p class="small opacity-75 mb-2">
+          Department of Physics, IIT Kharagpur
+        </p>
+
+        <p class="small mt-3 mb-0 opacity-75">
+          Designed by <strong>Subrata & Soumya</strong>
+        </p>
       </div>
 
-  </footer>
+      <!-- Address -->
+      <div class="col-md-4">
+        <h5 class="fw-bold">Address</h5>
+        <p class="mb-0 small">
+          Atomic, Molecular & Quantum Information (AMQI) Lab<br>
+          C-136, Department of Physics<br>
+          IIT Kharagpur, West Bengal, India
+        </p>
+      </div>
 
+    </div>
+
+    <hr class="border-secondary my-3">
+
+    <p class="text-center small opacity-50 mb-0">
+      © 2025 AMQI Lab — All Rights Reserved
+    </p>
+  </div>
+</footer>
   <script src="assets/js/recentUpdate.js"></script>
 
 </body>
