--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     }
   </style>
 
-  <div class="container pt-3">
+  <div class="container pt-3 pb-5"> 
     <div class="h1 text-center text-dark p-3">Research</div>
 
     <!-- 1 col on mobile, 2 on md, 3 on lg; equal height per row -->
