Jan 26 Photo Updates

--- a/gallery.html
+++ b/gallery.html
@@ -235,6 +235,20 @@ const IMAGES_PER_LOAD = window.innerWidth < 768 ? 12 : 20;
 
 /* Image JSON (with dates) */
 let images = [
+  // -------- 2026 ------------
+  { src: "Gallery/2026/Uluberia_02.jpeg", title: "State Level Seminar on \'AI Horizons: Empowering Human Capital for Atmanirbhar Bharat\'", desc: "organised by Uluberia College with collaboration of Ramsaday College", tag: "seminar", date: "2026-02-05" }, 
+  { src: "Gallery/2026/Uluberia_04.jpeg", title: "State Level Seminar on \'AI Horizons: Empowering Human Capital for Atmanirbhar Bharat\'", desc: "organised by Uluberia College with collaboration of Ramsaday College", tag: "seminar", date: "2026-02-05" }, 
+  { src: "Gallery/2026/WQC_03.jpeg", title: "Workshop on Quantum Computing and Algorithms", desc: "", tag: "seminar", date: "2026-01-31" }, 
+  { src: "Gallery/2026/WQC_08.jpeg", title: "Workshop on Quantum Computing and Algorithms", desc: "", tag: "seminar", date: "2026-01-31" }, 
+  { src: "Gallery/2026/WQC_10.jpeg", title: "Workshop on Quantum Computing and Algorithms", desc: "", tag: "seminar", date: "2026-01-31" }, 
+  { src: "Gallery/2026/Shibpur_01.jpeg", title: "One Day Seminar on Bose-Einstein Condenstate at IIEST Shibpur", desc: "", tag: "seminar", date: "2026-01-09" }, 
+  { src: "Gallery/2026/Shibpur_02.jpeg", title: "One Day Seminar on Bose-Einstein Condenstate at IIEST Shibpur", desc: "", tag: "seminar", date: "2026-01-09" }, 
+  { src: "Gallery/2026/Shibpur_03.jpeg", title: "One Day Seminar on Bose-Einstein Condenstate at IIEST Shibpur", desc: "", tag: "seminar", date: "2026-01-09" }, 
+  // -------- 2025 ------------
+  { src: "Gallery/2026/Narendra_01.jpeg", title: "", desc: "", tag: "misc", date: "2024-12-22" }, 
+  { src: "Gallery/2026/Arpana_Defence_01.jpeg", title: "Defense Seminar of Arpana Saboo", desc: "\'Interface Dynamics and Topological Structures in Spinor Bose-Einstein Condenstates\'", tag: "seminar", date: "2025-11-21" }, 
+  { src: "Gallery/2026/Arpana_Defence_02.jpeg", title: "Defense Seminar of Arpana Saboo", desc: "\'Interface Dynamics and Topological Structures in Spinor Bose-Einstein Condenstates\'", tag: "seminar", date: "2025-11-21" },
+  // -------- 2024 ------------
   { src: "Gallery/PRL_SM_1.jpg", title: "PRL Conference 2024", desc: "", tag: "conference", date: "2024-02-15" }, 
   { src: "Gallery/PRL_SM_2.jpg", title: "PRL Conference 2024", desc: "", tag: "conference", date: "2024-02-15" }, 
   { src: "Gallery/PRL_SM_3.jpg", title: "PRL Conference 2024", desc: "Poster session.", tag: "conference", date: "2024-02-15" }, 
